--- a/src/main/resources/templates/template/layout/layoutMain.html
+++ b/src/main/resources/templates/template/layout/layoutMain.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="template/layout/base :: commen_header(~{::title}, ~{::link})">
+<head th:replace="template/layout/base :: common_header(~{::title}, ~{::link})">
     <title>메인 타이틀</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/themes/smoothness/jquery-ui.css}">
